--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.leftSide {
+  margin-top: 5%;
+}
+
+.timeText {
+  color: darkgray;
+}
+
+.timer {
+  font-size: 2em;
+  font-weight: bold;
+  color: #282c34;
+}
+
+.rightSide {
+}
